force-app/main/default/objects/Needs_Card__c/Needs_Card__c.object-meta.xml
<CustomObject>
    <label>ニーズカード</label>
    <nameField>
        <displayFormat>NC-{0000}</displayFormat>
        <label>ニーズカード番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ニーズカード</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>