force-app/main/default/objects/Needs_Card__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ニーズカード</relationshipLabel>
    <relationshipName>Needs_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>