force-app/main/default/objects/Needs_Card__c/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <label>取引先業種</label>
    <length>100</length>
    <type>Text</type>
</CustomField>