force-app/main/default/objects/Needs_Card__c/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <label>取引先レコードタイプ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>