force-app/main/default/objects/Needs_Card__c/fields/Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact__c</fullName>
    <label>ビジネスインパクト</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>