force-app/main/default/objects/Needs_Card__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>ビジネスユニット</label>
    <length>100</length>
    <type>Text</type>
</CustomField>