force-app/main/default/objects/Needs_Card__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>顧客セグメント</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>OEM</fullName><default>false</default><label>OEM</label></value>
            <value><fullName>商社</fullName><default>false</default><label>商社</label></value>
            <value><fullName>エンドユーザー</fullName><default>false</default><label>エンドユーザー</label></value>
            <value><fullName>Tier1サプライヤー</fullName><default>false</default><label>Tier1サプライヤー</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>