force-app/main/default/objects/Needs_Card__c/fields/Customer_Voice__c.field-meta.xml
<CustomField>
    <fullName>Customer_Voice__c</fullName>
    <label>顧客の声</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>