force-app/main/default/objects/Needs_Card__c/fields/Impact_Source__c.field-meta.xml
<CustomField>
    <fullName>Impact_Source__c</fullName>
    <label>金額根拠</label>
    <length>255</length>
    <type>Text</type>
</CustomField>