force-app/main/default/objects/Needs_Card__c/fields/Merged_From__c.field-meta.xml
<CustomField>
    <fullName>Merged_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>統合元カード</label>
    <referenceTo>Needs_Card__c</referenceTo>
    <relationshipLabel>統合先カード</relationshipLabel>
    <relationshipName>Merged_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>