force-app/main/default/objects/Needs_Card__c/fields/Need_Type__c.field-meta.xml
<CustomField>
    <fullName>Need_Type__c</fullName>
    <label>ニーズ種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>製品ニーズ</fullName><default>false</default><label>製品ニーズ</label></value>
            <value><fullName>サービスニーズ</fullName><default>false</default><label>サービスニーズ</label></value>
            <value><fullName>クレーム</fullName><default>false</default><label>クレーム</label></value>
            <value><fullName>改善要望</fullName><default>false</default><label>改善要望</label></value>
            <value><fullName>新規案件</fullName><default>false</default><label>新規案件</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>