force-app/main/default/objects/Needs_Card__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>優先度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>高</fullName><default>false</default><label>高</label></value>
            <value><fullName>中</fullName><default>true</default><label>中</label></value>
            <value><fullName>低</fullName><default>false</default><label>低</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>