force-app/main/default/objects/Needs_Card__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連製品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ニーズカード</relationshipLabel>
    <relationshipName>Needs_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>