force-app/main/default/objects/Needs_Card__c/fields/Related_Cards__c.field-meta.xml
<CustomField>
    <fullName>Related_Cards__c</fullName>
    <label>関連カード</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>