force-app/main/default/objects/Needs_Card__c/fields/Source_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Source_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>抽出元面談</label>
    <referenceTo>Meeting_Record__c</referenceTo>
    <relationshipLabel>ニーズカード</relationshipLabel>
    <relationshipName>Needs_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>