force-app/main/default/objects/Needs_Card__c/fields/Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ニーズカード</relationshipLabel>
    <relationshipName>Needs_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>