force-app/main/default/objects/Needs_Card__c/fields/Source_Survey_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Survey_Id__c</fullName>
    <label>ソースアンケートID</label>
    <description>イベントアンケートからの自動生成時の重複防止用External ID。event_id + survey_id のハッシュ。</description>
    <type>Text</type>
    <length>255</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>