force-app/main/default/objects/Needs_Card__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>ソース種別</label>
    <description>ニーズカードの情報ソース種別。イベントアンケート経由の場合、回答者のマッチタイプを記録。</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>営業ヒアリング</fullName>
            </value>
            <value>
                <fullName>イベントアンケート（既存担当者）</fullName>
            </value>
            <value>
                <fullName>イベントアンケート（既存顧客・未登録者）</fullName>
            </value>
            <value>
                <fullName>イベントアンケート（新規）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>