force-app/main/default/objects/Needs_Card__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>新規</fullName><default>true</default><label>新規</label></value>
            <value><fullName>確認済</fullName><default>false</default><label>確認済</label></value>
            <value><fullName>対応中</fullName><default>false</default><label>対応中</label></value>
            <value><fullName>対応完了</fullName><default>false</default><label>対応完了</label></value>
            <value><fullName>却下</fullName><default>false</default><label>却下</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>